finish coordinate resolver